--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>AJEMPI</title>
-            <link rel="stylesheet" href="css/style.css">
+            <link rel="stylesheet" href="css/style-desktop.css">
+            <link rel="stylesheet" href="css/style-mobile.css">
         </head>
 
-        <main>
-            <body>
+        <body>
+            <main>
             <header>
-                <h1 class="cabecalho">AJEMPI - ASSESSORIA JURÍDICA ESPECIALIZADA AO MILITARES DO PIAUÍ.</h1>
+                <h1 class="cabecalho" id="ajempi1">AJEMPI</h1>
+                <h1 class="cabecalho" id="ajempi2">ASSESSORIA JURÍDICA ESPECIALIZADA AOS MILITARES DO PIAUÍ</h1>
             </header>
 
             <nav>
@@ -24,23 +26,23 @@
                 <section>
                     <h2 class="cabecalho">ÁREA DE ATUAÇÃO</h2>
                                 <ul>
-                                    <li>
-                                        <span class="caixa-de-destaque">Militar.</span>
+                                    <li class="caixa-de-destaque">
+                                        <span>Militar.</span>
                                     </li>
-                                    <li>
-                                        <span class="caixa-de-destaque">Cível.</span>
+                                    <li class="caixa-de-destaque">
+                                        <span>Cível.</span>
                                     </li>
-                                    <li>
-                                        <span class="caixa-de-destaque">Penal.</span>
+                                    <li class="caixa-de-destaque">
+                                        <span>Penal.</span>
                                     </li>
-                                    <li>
-                                        <span class="caixa-de-destaque">Consumidor.</span>
+                                    <li class="caixa-de-destaque">
+                                        <span>Consumidor.</span>
                                     </li>
-                                    <li>
-                                        <span class="caixa-de-destaque">Trabalhista.</span>
+                                    <li class="caixa-de-destaque">
+                                        <span>Trabalhista.</span>
                                     </li>
                                 </ul>
-                                <p>DEMANDAS COMUNS:</p>
+                                <p class="caixa-larga">DEMANDAS COMUNS:</p>
                     </section>
                 
                     <section>
@@ -58,9 +60,9 @@
                         <h3 class="cabecalho">Quem somo?</h3>
                             <a href="" class="topico">Equipe:</a>
                                     <ul>
-                                        <li><a href="">Rodri Martins</a></li>
-                                        <li><a href="">Layza Maciel</a></li>
-                                        <li><a href="">Kelma Marx</a></li>
+                                        <li class="caixa-de-destaque"><a href="">Rodri Martins</a></li>
+                                        <li class="caixa-de-destaque"><a href="">Layza Maciel</a></li>
+                                        <li class="caixa-de-destaque"><a href="">Kelma Marx</a></li>
                                     </ul>
                             <p class="topico">História:</p>
                             <p>Atuando especialente na área militar....</p>
@@ -70,10 +72,10 @@
                         <h4 class="cabecalho">Opinião de clientes:</h4>
                                 <p>
                                     <ul>
-                                        <li><span>Cliente 1</span></li>
-                                        <li><span>Cliente 2</span></li>
-                                        <li><span>Cliente 3</span></li>
-                                        <li><span>Cliente 4</span></li>
+                                        <li class="caixa-de-destaque"><span>Cliente 1</span></li>
+                                        <li class="caixa-de-destaque"><span>Cliente 2</span></li>
+                                        <li class="caixa-de-destaque"><span>Cliente 3</span></li>
+                                        <li class="caixa-de-destaque"><span>Cliente 4</span></li>
                                     </ul>
                                 </p>
                     </section>
@@ -82,9 +84,9 @@
                         <h5 class="cabecalho">Notícias</h5>
                             <p>
                                 <ul>
-                                    <li>Notícia Federal.</li>
-                                    <li>Notícia Estadual.</li>
-                                    <li>Notícia da empresa.</li>
+                                    <li class="caixa-de-destaque">Notícia Federal.</li>
+                                    <li class="caixa-de-destaque">Notícia Estadual.</li>
+                                    <li class="caixa-de-destaque">Notícia da empresa.</li>
                                 </ul>
                             </p>
                     </section>
